fix: fixed img overflow and added shadow to button

--- a/challenge2/styles.css
+++ b/challenge2/styles.css
@@ -10,6 +10,13 @@
     padding: 0;
 }
 
+html, body {
+    height: 100%;
+    margin: 0;
+    padding: 0;
+
+}
+
 html {
     font-size: 62.5%;
     font-family: "Ubuntu", sans-serif;
@@ -23,10 +30,10 @@ header p {
     display: flex;
     justify-content: center;
     align-items: center;
-    padding-top: 20px;
-    padding-bottom: 25%;
     background-color: #FEF2F2;
     flex-direction: column;
+    height: 100%;
+    overflow: hidden;
 }
 
 .form-container {
@@ -134,6 +141,7 @@ button {
     padding: 15px 20px;
     border-radius: 20px;
     align-self: center;
+    box-shadow: #5A5F70;
 }
 
 .error-message {
@@ -163,16 +171,17 @@ button {
     }
     
     .image-container {
-        display: block;
+        display: flex;
         width: 60%; 
         text-align: center;
         padding: 0px;
     }
     
     .image-container img {
-        display: block;
+        display: flex;
         max-width: 100%;
         height: auto;
+        max-height: 100vh;
     }
     
     .form-container {
